--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@logtail/pino": "^0.5.2",
     "@mui/material": "^7.3.6",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@reduxjs/toolkit": "^2.11.2",
     "@sentry/nextjs": "^8.34.0",
@@ -49,6 +51,7 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.35.1",
     "lucide-react": "^0.453.0",
     "next": "^14.2.35",
@@ -58,6 +61,7 @@
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.2.0",
